First usable MQTT chart
- Added mosquitto.conf through config map
- Mapped mosquitto.conf to container through volume
- Added TCP/1883 to traefik ingress to expose MQTT server
- Fixed selector mismatch in service deployment

--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mqtt
 spec:
   selector:
-    app.kubernetes.io/name: mqtt
+    app: mqtt
   ports:
-    - protocol: TCP
-      port: 1883
+    - port: 1883
+      protocol: TCP
