--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -14,6 +14,16 @@ spec:
       labels:
         app: mqtt
     spec:
+      volumes:
+        - name: mqtt-config
+          configMap:
+            name: mqtt
+            items:
+            - key: mqtt.config
+              path: mosquitto.conf
       containers:
-      - name: mosquitto
-        image: eclipse-mosquitto:2.0.15
+        - name: mosquitto
+          image: eclipse-mosquitto:2.0.15
+          volumeMounts:
+            - name: mqtt-config
+              mountPath: /mosquitto/config          
