--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mqtt
+  name: {{ .Release.Name }}
 spec:
   selector:
-    app: mqtt
+    app: {{ .Release.Name }}
   ports:
     - port: 1883
       protocol: TCP
