--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -12,4 +12,4 @@ spec:
     - match: HostSNI(`*`)
       services:
         - name: {{ .Release.Name }}
-          port: 1883
+          port: {{ template "configuredPort" . }}
