Added helm chart unit tests - Added unittest plugin - Added tests for rendering the listener in the config map

--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -4,6 +4,6 @@ metadata:
   name: {{ .Release.Name }}
 data:
   mqtt.config: |
-    listener {{ template "configuredPort" . }}
+    listener {{ template "configuredPort" . }} {{ template "configuredAddress" . }}
     protocol mqtt
     allow_anonymous true
