--- a/tests/ingress_test.yaml
+++ b/tests/ingress_test.yaml
@@ -2,16 +2,11 @@ suite: test ingress manifest
 templates:
   - ingress.yaml
 tests:
-  - it: Should have the right API version
+  - it: Should generate a manifest
     asserts:
-      - equal:
-          path: apiVersion
-          value: traefik.containo.us/v1alpha1
-
-  - it: Should have the right kind
-    asserts:
-      - isKind:
-          of: IngressRouteTCP
+      - containsDocument:
+          kind: IngressRouteTCP
+          apiVersion: traefik.containo.us/v1alpha1
 
   - it: Should target ingress entry point mqtt
     asserts:
