--- a/values.yaml
+++ b/values.yaml
@@ -27,4 +27,4 @@ configuration:
 #   # This value is optional.
 #   # If not set, the default value of 256MBi will be used.
 #   # See https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/quantity/#Quantity for further information
-#   # size: 256MBi
+#   # size: 256Mi
