Added uid, gid and file permissens to the container spec

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -36,3 +36,7 @@ spec:
             - name: mqtt-data
               mountPath: /mosquitto/data
             {{ end }}
+      securityContext:
+        runAsUser: 1883
+        runAsGroup: 1883
+        fsGroup: 1883
