Added configuration of the storage class provider

--- a/templates/pvc.yaml
+++ b/templates/pvc.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: {{ .Values.configuration.persistence.storageClassName | default "local-path" }}
   resources:
     requests:
       storage: {{ .Values.configuration.persistence.size | default "256Mi" }}
